--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: rgb(48, 48, 48);
 }
 
 body.is-preload *,
@@ -205,14 +205,14 @@ a {
   -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-  border-bottom: dotted 1px;
+  /* border-bottom: dotted 1px; */
   color: #49bf9d;
   text-decoration: none;
 }
 
 a:hover {
   border-bottom-color: transparent;
-  color: #49bf9d !important;
+  color: #327a66 !important;
   text-decoration: none;
 }
 
@@ -297,7 +297,7 @@ sup {
 
 hr {
   border: 0;
-  border-bottom: solid 2px #efefef;
+  border-bottom: solid 2px #2e2d2d;
   margin: 2em 0;
 }
 
@@ -306,16 +306,16 @@ hr.major {
 }
 
 blockquote {
-  border-left: solid 6px #efefef;
+  border-left: solid 6px #2e2d2d;
   font-style: italic;
   margin: 0 0 2em 0;
   padding: 0.5em 0 0.5em 1.5em;
 }
 
 code {
-  background: #f7f7f7;
+  background: #2e2d2d;
   border-radius: 0.35em;
-  border: solid 2px #efefef;
+  border: solid 2px #2e2d2d;
   font-family: "Courier New", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
@@ -1911,7 +1911,7 @@ textarea {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  background: #f7f7f7;
+  background: #2e2d2d;
   border-radius: 0.35em;
   border: solid 2px transparent;
   color: inherit;
@@ -2015,7 +2015,7 @@ input[type="radio"] + label:before {
 
 input[type="checkbox"] + label:before,
 input[type="radio"] + label:before {
-  background: #f7f7f7;
+  background: #2e2d2d;
   border-radius: 0.35em;
   border: solid 2px transparent;
   content: "";
@@ -2075,7 +2075,7 @@ input[type="radio"] + label:before {
 
 .box {
   border-radius: 0.35em;
-  border: solid 2px #efefef;
+  border: solid 2px #2e2d2d;
   margin-bottom: 2em;
   padding: 1.5em;
 }
@@ -2231,7 +2231,7 @@ ul.tecnos li .tecno:before {
   border-radius: 0.35em;
   border: solid 3px rgba(255, 255, 255, 0.5);
   color: #fff;
-  content: "Open";
+  content: "Finished";
   display: inline-block;
   font-size: 0.8em;
   font-weight: 400;
@@ -2262,7 +2262,7 @@ ul.tecnos li .tecno:before {
 }
 
 .image.left {
-  float: left;
+  float: left;  
   margin: 0 1.5em 1em 0;
   top: 0.25em;
 }
@@ -2306,6 +2306,117 @@ ul.tecnos li .tecno:before {
   width: 100%;
 }
 
+.image2 {
+  border-radius: 0.35em;
+  border: 0;
+  display: inline-block;
+  position: relative;
+}
+
+.image2:before {
+  -moz-transition: opacity 0.2s ease-in-out;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -ms-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+  background: url("images/overlay.png");
+  border-radius: 0.35em;
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.image2.thumb {
+  text-align: center;
+}
+
+.image2.thumb:after {
+  -moz-transition: opacity 0.2s ease-in-out;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -ms-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+  border-radius: 0.35em;
+  border: solid 3px rgba(255, 255, 255, 0.5);
+  color: #fff;
+  content: "In progress";
+  display: inline-block;
+  font-size: 0.8em;
+  font-weight: 400;
+  left: 50%;
+  line-height: 2.25em;
+  margin: -1.25em 0 0 -3em;
+  opacity: 0;
+  padding: 0 1.5em;
+  position: absolute;
+  text-align: center;
+  text-decoration: none;
+  top: 50%;
+  white-space: nowrap;
+}
+
+.image2.thumb:hover:after {
+  opacity: 1;
+}
+
+.image2.thumb:hover:before {
+  background: url("images/overlay.png"), url("images/overlay.png");
+  opacity: 1;
+}
+
+.image2 img {
+  border-radius: 0.35em;
+  display: block;
+}
+
+.image2.left {
+  float: left;
+  margin: 0 1.5em 1em 0;
+  top: 0.25em;
+}
+
+.image2.right {
+  float: right;
+  margin: 0 0 1em 1.5em;
+  top: 0.25em;
+}
+
+.image2.left,
+.image2.right {
+  max-width: 40%;
+}
+
+.image2.left img,
+.image2.right img {
+  width: 100%;
+}
+
+.image2.fit {
+  display: block;
+  margin: 0 0 2em 0;
+  width: 100%;
+}
+
+.image2.fit img {
+  width: 100%;
+}
+
+.image2.avatar {
+  border-radius: 100%;
+}
+
+.image2.avatar:before {
+  display: none;
+}
+
+.image2.avatar img {
+  border-radius: 100%;
+  width: 100%;
+}
+
 /* List */
 
 ol {
@@ -2334,7 +2445,7 @@ ul.alt {
 }
 
 ul.alt li {
-  border-top: solid 2px #efefef;
+  border-top: solid 2px #2e2d2d;
   padding: 0.5em 0;
 }
 
@@ -2408,6 +2519,7 @@ ul.actions {
   display: flex;
   cursor: default;
   list-style: none;
+  margin-top: 1em;
   margin-left: -1em;
   padding-left: 0;
 }
@@ -2532,13 +2644,13 @@ table {
 }
 
 table tbody tr {
-  border: solid 1px #efefef;
+  border: solid 1px #2e2d2d;
   border-left: 0;
   border-right: 0;
 }
 
 table tbody tr:nth-child(2n + 1) {
-  background-color: #f7f7f7;
+  background-color: #2e2d2d;
 }
 
 table td {
@@ -2554,11 +2666,11 @@ table th {
 }
 
 table thead {
-  border-bottom: solid 2px #efefef;
+  border-bottom: solid 2px #2e2d2d;
 }
 
 table tfoot {
-  border-top: solid 2px #efefef;
+  border-top: solid 2px #2e2d2d;
 }
 
 table.alt {
@@ -2566,7 +2678,7 @@ table.alt {
 }
 
 table.alt tbody tr td {
-  border: solid 2px #efefef;
+  border: solid 2px #2e2d2d;
   border-left-width: 0;
   border-top-width: 0;
 }
@@ -2607,7 +2719,7 @@ input[type="button"],
     border-color 0.2s ease-in-out;
   background-color: transparent;
   border-radius: 0.35em;
-  border: solid 3px #efefef;
+  border: solid 3px #2e2d2d;
   color: #787878 !important;
   cursor: pointer;
   display: inline-block;
@@ -2857,7 +2969,7 @@ input[type="button"]:disabled,
 }
 
 #main > section {
-  border-top: solid 2px #efefef;
+  border-top: solid 2px #2e2d2d;
   margin: 4em 0 0 0;
   padding: 4em 0 0 0;
 }
